examples/test/testpolicy18200.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy18200
  namespace: namespace428
spec:
  podSelector:
    matchLabels:
      key39: value27
      key9: value47
      key40: value40
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key12: value33
          key36: value47
          key45: value43
